fix style on mobile

--- a/src/components/banner/index.module.less
+++ b/src/components/banner/index.module.less
@@ -3,14 +3,12 @@
 .bannerContainer {
   padding: 10px 25px;
   background-color: #000;
-  height: 42px;
   overflow: hidden;
 
-  @media @tablet, @phone {
-    height: 62px;
-  }
-
   .bannerText {
+    height: 100%;
+    vertical-align: middle;
+
     .paragraph4-regular();
     text-align: center;
     color: #fff;
