--- a/src/components/header/index.module.less
+++ b/src/components/header/index.module.less
@@ -11,7 +11,7 @@
   position: sticky;
   height: @header-height-desktop;
 
-  @media @tablet, @phone {
+  @media (max-width: 640px) {
     height: @header-height-tablet;
   }
 }
