--- a/src/styles/variables.module.less
+++ b/src/styles/variables.module.less
@@ -29,8 +29,8 @@
 @color-black4: #ececee;
 @color-black5: #9ca6b4;
 
-@header-height-desktop: calc(58px + 42px);
-@header-height-tablet: calc(60px + 62px);
+@header-height-desktop: calc(59px + 42px);
+@header-height-tablet: calc(59px + 62px);
 
 @footer-height-desktop: 467px;
 @footer-height-tablet: 676px;
@@ -43,3 +43,5 @@
 @doc-collapse-width: 40px;
 
 @homepage-content-width: 1170px;
+
+@header-switch-break-point: 1280px;
